# llm-eval-lab

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
dashboard/: app.py
eval_configs/: policy_summarization_dense.yaml  policygpt_dense.yaml  policygpt_hybrid.yaml
src/: config.py  datasets.py  eval_runner.py  metrics.py  policygpt_client.py
