[project]
name = "llm-eval-lab"
version = "0.1.0"
description = "Evaluation harness and dashboard for PolicyGPT RAG system"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.5.0",
  "pyyaml>=6.0.0",
  "pandas>=2.2.0",
  "streamlit>=1.32.0",
  "python-dotenv>=1.0.1",
  openai>=1.30.0,
]

[project.optional-dependencies]
dev = [
  "ipykernel",
  "black",
  "ruff",
]